# sumoITScontrol

./: README.md  demo_ALINEA.py  demo_HERO.py  demo_MAX_FIX.py  demo_MAX_FLEX.py  demo_METALINE.py  demo_SCOSCA.py  demo_optimisation.py  main_simulation.py  pyproject.toml
.github/workflows/: release.yml
demo_simulation_models/example_intersection_management/: BusRoutes.rou.xml  Network.net.xml  Sensors.add.xml  VehicleDemand.rou.xml  e2_0.xml  e2_1.xml
demo_simulation_models/example_ramp_metering/: Configuration_1.sumocfg  Configuration_3.sumocfg  Configuration_4.sumocfg  Demand_1.rou.xml  Demand_3.rou.xml  notes.txt
demos/: demo_ALINEA.py  demo_HERO.py  demo_MAX_FIX.py  demo_MAX_FLEX.py  demo_METALINE.py  demo_SCOSCA.py  demo_optimisation_execute_script.py
demos/demo_simulation_models/example_intersection_management/: BusDemand.rou.xml  BusStops.add.xml  Configuration.sumocfg  info.txt
demos/demo_simulation_models/example_ramp_metering/: Demand_2.rou.xml  (+4 more)
resources/: CaseStudy_IntersectionMan.pptx  CaseStudy_RampMetering.pptx  Figure_Banner.pptx
src/sumoITScontrol/: ramp_meter.py  ramp_meter_group.py  simulation_tools.py
sumoITScontrol/: LICENSE  __init__.py  intersection.py  intersection_group.py  pyproject.toml  ramp_meter.py  ramp_meter_group.py  simulation_tools.py
sumoITScontrol/MAX_PRESSURE/: ControllerFairSCOSCA_2.py  ControllerMaxPressure.py  ControllerSCOSCA.py  Optimizer.py
sumoITScontrol/SCOOTSSCATS/: ControllerFairSCOSCA_1.py  RunSimulation.py  Utils.py
sumoITScontrol/control/: __init__.py
sumoITScontrol/control/intersection_management/: MaxPressure_Fix.py  MaxPressure_Flex.py  Recorder.py  ScootScats.py  __init__.py
sumoITScontrol/control/ramp_metering/: ALINEA.py  HERO.py  METALINE.py  __init__.py
(+4 files in other folders)
