[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sumoITScontrol"            # Name on PyPI
version = "0.1.0"
description = "Tools for ramp metering and ITS control with SUMO"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GNU" }         # Or your license
authors = [
  { name = "Kevin Riehl", email = "kriehl@ethz.ch" }
]
# Optional but recommended
keywords = ["SUMO", "traffic", "ITS", "ramp metering"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU GPL License",
  "Operating System :: OS Independent",
]

# Runtime dependencies (example)
dependencies = [
  "numpy",
  "traci",
]

[project.urls]
Homepage = "https://github.com/kriehl/sumoITScontrol"
Source = "https://github.com/kriehl/sumoITScontrol"
Issues = "https://github.com/kriehl/sumoITScontrol/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["sumoITScontrol*"]